bootstrap and django form syling

--- a/trackerapp/templates/add.html
+++ b/trackerapp/templates/add.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add a expense form</title>
-</head>
-<body>
-    <div>
+{% extends "base.html" %}
+{% block content %}
+    <div class="container">
         <form action="{% url 'add' %}" method ="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Add Expense</button>
+            <button type="submit" class="btn btn-primary">Add Expense</button>
 
         </form>
     </div>
-</body>
-</html>
+{% endblock content %}
