--- a/trackerapp/templates/update.html
+++ b/trackerapp/templates/update.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <h2>Edit Expense Detail</h2>
-    <form method="POST" enctype="multipart/form">
+    <form method="POST" enctype="multipart/form" >
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Update</button>
+        <button type="submit" class="btn btn-primary">Update</button>
     </form>
-</body>
-</html>
+{% endblock content %}
